test/compile_error/missing_parameter_name_test.exs
defmodule ApicalTest.CompileError.MissingParameterNameTest do
  use ExUnit.Case, async: true

  test "this"
end
